src/test/ui/extern-prelude-fail.stderr
error[E0432]: unresolved import `extern_prelude`
  --> $DIR/extern-prelude-fail.rs:7:9
   |
LL |     use extern_prelude::S;
   |         ^^^^^^^^^^^^^^ maybe a missing crate `extern_prelude`?

error[E0425]: cannot find value `S` in `extern_prelude`
  --> $DIR/extern-prelude-fail.rs:8:31
   |
LL |     let s = ::extern_prelude::S;
   |                               ^ not found in `extern_prelude`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
